// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component Video functional tests When getUrl returns null, with an errorComponent, should render the error 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Video component Video snapshots matches snapshot with additional props for video and input 1`] = `
<DocumentFragment>
  <video
    class="video-class"
    controls=""
    src="mock object url"
    title="test video"
  />
  <input
    accept="video/*"
    class="input-class"
    type="file"
  />
</DocumentFragment>
`;

exports[`Video component Video snapshots matches snapshot with standard props 1`] = `
<DocumentFragment>
  <video
    controls=""
    src="mock object url"
    title="test video"
  />
</DocumentFragment>
`;

exports[`Video component Video snapshots renders an error message if an errorComponent is provided 1`] = `
<DocumentFragment>
  <span
    id="custom-error-component"
  >
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Video component Video snapshots renders default error message if there is an error and no errorComponent is passed 1`] = `
<DocumentFragment>
  <span>
    Error: No value found for property.
  </span>
</DocumentFragment>
`;

exports[`Video component Video snapshots renders default loading message if thing is undefined and there is no error 1`] = `
<DocumentFragment>
  <span>
    fetching data in progress
  </span>
</DocumentFragment>
`;

exports[`Video component Video snapshots renders loading component if passed and thing is undefined and there is no error 1`] = `
<DocumentFragment>
  <span
    id="custom-loading-component"
  >
    loading...
  </span>
</DocumentFragment>
`;
